--- a/src/component/Navbar.module.css
+++ b/src/component/Navbar.module.css
@@ -5,6 +5,18 @@
     margin-right: 10px;
 }
 
+.menuButton {
+    border-radius: 50%;
+    border: none;
+    margin: 14px;
+    height: 36px;
+}
+
+.menuIcon {
+    width: 100%;
+    height: 100%;
+}
+
 li {
     display: inline-block;
     padding: 10px 20px;
@@ -28,4 +40,35 @@ li a {
 li a:active {
     text-decoration: none;
     color: blue;
+}
+
+.active {
+    left: 0 !important;
+}
+
+@media (max-width:768px) {
+    .navbarDiv {
+        display: block;
+        background-color: white;
+        margin-right: 10px;
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        left: -100%;
+    }
+
+    .navbarDivMobile {
+        display: block;
+        background-color: white;
+        margin-right: 10px;
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        left: 0;
+    }
+
+
+    li {
+        display: block;
+    }
 }
