--- a/src/content/Home/Home.module.css
+++ b/src/content/Home/Home.module.css
@@ -1,11 +1,12 @@
 .contentStyle {
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     -webkit-clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
     clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
     background: var(--black-gray);
     z-index: 0;
+    min-height: calc(480px + 65px);
 }
 
 .flexSB {
@@ -74,7 +75,6 @@
     object-position: bottom;
 }
 
-
 @media (max-width:768px) {
     .flexSB {
         height: 100%;
@@ -100,6 +100,19 @@
     }
 
     .contentStyle {
-        display: none;
+        -webkit-clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
+        clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
     }
 }
+
+@media (max-width:480px) {
+    .homeInfoMe {
+        font-size: 1.4rem;
+    }
+
+    .homeInfoWork {
+        font-size: 1rem;
+    }
+}
+
+@media (max-height:481) {}
