--- a/src/component/Navbar.module.css
+++ b/src/component/Navbar.module.css
@@ -42,31 +42,29 @@ li a:active {
     color: blue;
 }
 
-.active {
-    left: 0 !important;
-}
 
 @media (max-width:768px) {
     .navbarDiv {
-        display: block;
-        background-color: white;
-        margin-right: 10px;
-        width: 100%;
-        height: 100vh;
-        position: absolute;
-        left: -100%;
-    }
-
-    .navbarDivMobile {
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         background-color: white;
         margin-right: 10px;
         width: 100%;
         height: 100vh;
         position: fixed;
-        left: 0;
+        left: -100%;
+        transition: left 0.4s ease-in;
+        text-align: center;
     }
 
+    nav {
+        width: 100%;
+    }
+
+    .active {
+        left: 0;
+    }
 
     li {
         display: block;
