--- a/src/content/Home/Home.module.css
+++ b/src/content/Home/Home.module.css
@@ -47,17 +47,19 @@
 }
 
 .pickMeButton {
-    padding: 5px 8px;
+    padding: 8px 10px;
     background-color: var(--red-orange);
     color: var(--white);
     border-radius: 5px;
-    border: none;
     font-size: 1rem;
+    font-weight: 600;
+    border: 1px solid #f0f0f0;
 }
 
 .pickMeButton a {
     text-decoration: none;
     color: var(--white);
+    letter-spacing: 0.8px;
 }
 
 .homeImg {
