--- a/src/content/project/projects.module.css
+++ b/src/content/project/projects.module.css
@@ -11,7 +11,7 @@
 .backButton {
     border-radius: 50%;
     border: none;
-    margin: 20px;
+    margin: 14px;
     height: 36px;
 }
 
@@ -20,10 +20,10 @@
     height: 100%;
 }
 
-.projectsDiv {
-    padding-top: 50px;
-}
-
-.projectsDiv h1 {
-    font-weight: 300;
+.projectsDiv h2 {
+    font-weight: 700;
+    text-align: center;
+    color: var(--black-gray);
+    font-size: 3rem;
+    text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0, 0, 0, 0.15);
 }
