--- a/src/content/project/style.module.css
+++ b/src/content/project/style.module.css
@@ -1,27 +1,43 @@
 .img {
-    width: 60%;
-    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .projectsList {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin: 2em;
-    background-color: #fff;
-    padding: 10px;
-    border-radius: 10px;
+    border-radius: 10px 0 10px 0;
 }
 
 .title {
-    padding: 1em;
+    font-weight: 400;
 }
 
-.paragraph {
-    padding: 1em;
+.primaryImg {
+    width: 60%;
+    box-shadow: rgba(0, 0, 0, 0.15) -1.95px -1.95px 2.6px;
 }
 
-@media (max-width:900px) {
+.description {
+    width: 49%;
+    padding: 10px;
+}
+
+
+@media (max-width:768px) {
+
     .projectsList {
-        flex-direction: column;
+        flex-wrap: wrap;
     }
 
+    .primaryImg {
+        width: 100%;
+    }
+
+    .description {
+        width: 100%;
+    }
 }
