--- a/src/content/Projects/Projects.module.css
+++ b/src/content/Projects/Projects.module.css
@@ -20,10 +20,27 @@
     height: 100%;
 }
 
-.projectsDiv h2 {
-    font-weight: 700;
-    text-align: center;
-    color: var(--black-gray);
+.projectTitle {
+    padding: 14px 20px;
+}
+
+.projectTitle h2 {
     font-size: 3rem;
-    text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0, 0, 0, 0.15);
+    font-weight: 800;
+    color: var(--dark-blue);
+    letter-spacing: 0.6px;
+    text-align: center;
+    line-height: 0.9;
+}
+
+.projectTitle p {
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--dark-blue);
+    letter-spacing: 0.6px;
+    text-align: center;
+}
+
+.techStack {
+    font-weight: 600;
 }
