--- a/src/content/Projects/ProjectsList.module.css
+++ b/src/content/Projects/ProjectsList.module.css
@@ -8,12 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 2em;
-    border-radius: 10px 0 10px 0;
-}
-
-.title {
-    font-weight: 400;
+    margin: 0 20px 2em 20px;
 }
 
 .primaryImg {
@@ -23,9 +18,28 @@
 
 .description {
     width: 49%;
-    padding: 10px;
+    padding: 20px 10px;
+    background-color: var(--white);
+    border-radius: 0 5px 5px 0;
+    color: var(--black-gray);
 }
 
+.title {
+    font-weight: 400;
+}
+
+.description li {
+    display: inline-block;
+    font-size: 14px;
+    padding: 0px 5px;
+    font-weight: 400;
+}
+
+.description li::after {
+    content: "|";
+    margin-left: 10px;
+    font-weight: bold;
+}
 
 @media (max-width:768px) {
 
