--- a/src/content/Projects/ProjectsList.module.css
+++ b/src/content/Projects/ProjectsList.module.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: 0;
+    border-radius: 5px 0 0 5px;
 }
 
 .projectsList {
@@ -9,11 +11,13 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 20px 2em 20px;
+
 }
 
 .primaryImg {
     width: 60%;
     box-shadow: rgba(0, 0, 0, 0.15) -1.95px -1.95px 2.6px;
+    border-radius: 5px 0 0 5px;
 }
 
 .description {
@@ -25,7 +29,8 @@
 }
 
 .title {
-    font-weight: 400;
+    font-weight: 600;
+    font-size: 2rem;
 }
 
 .description li {
@@ -42,16 +47,40 @@
 }
 
 @media (max-width:768px) {
-
     .projectsList {
         flex-wrap: wrap;
+        border-radius: 20px;
     }
+
 
     .primaryImg {
         width: 100%;
+        border-radius: 20px 20px 0 0;
+    }
+
+    .description {
+        border-radius: 0 0 20px 20px;
+        box-shadow: rgba(0, 0, 0, 0.15) -1.95px 1.95px 2.6px;
+    }
+
+    .img {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        border-radius: 20px 20px 0 0;
     }
 
     .description {
         width: 100%;
+    }
+
+    .title {
+        font-size: 1.6rem;
+    }
+}
+
+@media (max-width:480px) {
+    .title {
+        font-size: 1.2rem;
     }
 }
