--- a/src/content/About/About.module.css
+++ b/src/content/About/About.module.css
@@ -34,7 +34,7 @@
 .aboutPart {
     width: 50%;
     text-align: center;
-    color: var(--dark-blue);
+    color: var(--black-gray);
 }
 
 .aboutPartTitle,
