enchancing UI design

--- a/src/component/Navbar.module.css
+++ b/src/component/Navbar.module.css
@@ -19,21 +19,21 @@
 
 nav li {
     display: inline-block;
-    padding: 10px 20px;
-    margin: 10px 5px;
-    border-radius: 10px;
+    margin: 20px 5px;
     font-family: 'Poppins', Helvetica, sans-serif;
     font-weight: 500;
 }
 
-nav li:hover {
+nav li a:hover {
     background-color: #ffffff;
     background-color: #f0f0f0;
 }
 
 
 nav li a {
+    padding: 10px 20px;
     text-decoration: none;
+    border-radius: 10px;
     color: var(--black-gray);
 }
 
