--- a/src/content/About/About.module.css
+++ b/src/content/About/About.module.css
@@ -1,107 +1,112 @@
 .clipPath {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    -webkit-clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
-    clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
-    background: var(--black-gray);
-    z-index: -1;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  -webkit-clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
+  clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
+  background: var(--black-gray);
+  z-index: -1;
 }
 
 .aboutSection {
-    height: 100vh;
+  height: 100vh;
 }
 
 .backButton {
-    border-radius: 50%;
-    border: none;
-    margin: 14px;
-    height: 36px;
+  border-radius: 50%;
+  border: none;
+  margin: 14px;
+  height: 36px;
 }
 
 .backIcon {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .flexSB {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  overflow: hidden;
 }
 
 .aboutPart {
-    width: 50%;
-    text-align: center;
-    color: var(--black-gray);
+  width: 50%;
+  color: var(--black-gray);
 }
 
 .aboutPartTitle,
 .skillsPartTitle {
-    padding: 14px 20px;
+  padding: 14px 20px;
 }
 
 .aboutPartTitle h2,
 .skillsPartTitle h2 {
-    font-size: 3rem;
-    font-weight: 800;
-    letter-spacing: 0.6px;
-    text-align: center;
-    line-height: 0.9;
+  font-size: 3rem;
+  font-weight: 800;
+  letter-spacing: 0.6px;
+  text-align: center;
+  line-height: 0.9;
 }
 
-.aboutPartParagraph {
-    text-align: left;
-    font-size: 1rem;
-    padding: 1em 0;
+.aboutPartTitle p,
+.skillsPartTitle p {
+  text-align: center;
 }
 
+/*-- About Content --*/
+.aboutPartContents {
+  padding: 0 10px 10px;
+}
+
+.aboutPartContents h2,
+.skillsPartContents h2 {
+  font-size: 1.6rem;
+  line-height: 0.9;
+  margin-top: 10px;
+}
 
 .skillsPart {
-    width: 50%;
-    color: var(--white);
+  width: 50%;
+  color: var(--white);
 }
 
-.skillsPartParagraph {
-    text-align: left;
-    font-size: 1rem;
+.skillsPartContents {
+  padding: 0 10px;
 }
 
 .hardSkillsList {
-    margin: 0;
-    padding: 0;
-    display: block;
-    font-size: 1rem;
-    width: 50px;
+  margin: 0;
+  padding: 0;
+  display: block;
+  font-size: 1rem;
+  width: 50px;
 }
 
+@media (max-width: 768px) {
+  .aboutPart {
+    width: 100%;
+  }
 
+  .skillsPart {
+    width: 100%;
+    background: var(--black-gray);
+  }
 
-@media (max-width:768px) {
-    .aboutPart {
-        width: 100%;
-    }
+  .clipPath {
+    display: none;
+  }
 
-    .skillsPart {
-        width: 100%;
-        background: var(--black-gray);
-    }
-
-    .clipPath {
-        display: none;
-    }
-
-    .aboutPartTitle h2,
-    .skillsPartTitle h2 {
-        font-size: 2rem;
-    }
+  .aboutPartTitle h2,
+  .skillsPartTitle h2 {
+    font-size: 2rem;
+  }
 }
 
-@media (max-width:480px) {
-
-    .aboutPartTitle h2,
-    .skillsPartTitle h2 {
-        font-size: 1.6rem;
-    }
+@media (max-width: 480px) {
+  .aboutPartTitle h2,
+  .skillsPartTitle h2 {
+    font-size: 1.6rem;
+  }
 }
