--- a/src/content/Projects/ProjectsList.module.css
+++ b/src/content/Projects/ProjectsList.module.css
@@ -1,86 +1,125 @@
-.img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: 0;
-    border-radius: 5px 0 0 5px;
+.projectsList {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 20px 2em 20px;
 }
 
-.projectsList {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 20px 2em 20px;
+.projectsList:nth-child(odd) {
+  flex-direction: row-reverse;
+}
 
+.projectsList:nth-child(odd) .description {
+  width: 49%;
+  padding: 20px 10px;
+  background-color: var(--black-gray);
+  border-radius: 5px 0 0 5px;
+  color: var(--white);
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+.projectsList:nth-child(even) .description {
+  box-shadow: 6px 2px 8px 2px rgba(41, 50, 65, 0.59);
+  -webkit-box-shadow: 6px 2px 8px 2px rgba(41, 50, 65, 0.59);
+  -moz-box-shadow: 6px 2px 8px 2px rgba(41, 50, 65, 0.59);
 }
 
 .primaryImg {
-    width: 60%;
-    box-shadow: rgba(0, 0, 0, 0.15) -1.95px -1.95px 2.6px;
-    border-radius: 5px 0 0 5px;
+  width: 60%;
+  box-shadow: rgba(0, 0, 0, 0.15) -1.95px -1.95px 2.6px;
+  border-radius: 5px 0 0 5px;
+}
+
+.primaryImg img {
+  object-fit: contain;
+  aspect-ratio: auto 1360 / 768;
 }
 
 .description {
-    width: 49%;
-    padding: 20px 10px;
-    background-color: var(--white);
-    border-radius: 0 5px 5px 0;
-    color: var(--black-gray);
+  width: 49%;
+  padding: 20px 10px;
+  background-color: var(--white);
+  border-radius: 0 5px 5px 0;
+  color: var(--black-gray);
 }
 
-.title {
-    font-weight: 600;
-    font-size: 2rem;
+.description h1 {
+  font-weight: 600;
+  font-size: 2rem;
+  line-height: 0.9;
 }
 
-.description li {
-    display: inline-block;
-    font-size: 14px;
-    padding: 0px 5px;
-    font-weight: 400;
+.description p {
+  font-size: 1rem;
+  margin-bottom: 5px;
 }
 
-.description li::after {
-    content: "|";
-    margin-left: 10px;
-    font-weight: bold;
+.projectLinks {
+  font-size: 14px;
 }
 
-@media (max-width:768px) {
-    .projectsList {
-        flex-wrap: wrap;
-        border-radius: 20px;
-    }
-
-
-    .primaryImg {
-        width: 100%;
-        border-radius: 20px 20px 0 0;
-    }
-
-    .description {
-        border-radius: 0 0 20px 20px;
-        box-shadow: rgba(0, 0, 0, 0.15) -1.95px 1.95px 2.6px;
-    }
-
-    .img {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        border-radius: 20px 20px 0 0;
-    }
-
-    .description {
-        width: 100%;
-    }
-
-    .title {
-        font-size: 1.6rem;
-    }
+.projectLinks span {
+  display: block;
 }
 
-@media (max-width:480px) {
-    .title {
-        font-size: 1.2rem;
-    }
+.projectLinks span a {
+  color: var(--red-orange);
+  padding: 0 3px;
+}
+
+.techStacks {
+  text-align: right;
+}
+
+.techStacks p {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.techStacks ul {
+  line-height: 14px;
+}
+
+.techStacks li {
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.description li::before {
+  content: "/";
+}
+
+@media (max-width: 910px) {
+  .projectsList {
+    flex-wrap: wrap;
+    border-radius: 20px;
+  }
+
+  .primaryImg {
+    width: 100% !important;
+    border-radius: 0 0 20px 20px !important;
+    box-shadow: rgba(0, 0, 0, 0.15) -1.95px 1.95px 2.6px;
+  }
+
+  .primaryImg img {
+    border-radius: 5px 5px 0 0 !important;
+    box-shadow: rgba(0, 0, 0, 0.15) -1.95px 1.95px 2.6px;
+  }
+
+  .description {
+    width: 100% !important;
+    border-radius: 0 0 5px 5px !important;
+    box-shadow: rgba(0, 0, 0, 0.15) -1.95px 1.95px 2.6px;
+  }
+
+  .description h1 {
+    font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 1.2rem;
+  }
 }
