--- a/src/component/Navbar.module.css
+++ b/src/component/Navbar.module.css
@@ -1,76 +1,75 @@
 .navbarDiv {
-    display: flex;
-    justify-content: flex-end;
-    color: transparent;
-    margin-right: 10px;
+  display: flex;
+  justify-content: flex-end;
+  color: transparent;
+  margin-right: 10px;
+  z-index: 1;
 }
 
 .menuButton {
-    border-radius: 50%;
-    border: none;
-    margin: 14px;
-    height: 36px;
+  border-radius: 50%;
+  border: none;
+  margin: 14px;
+  height: 36px;
 }
 
 .menuIcon {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 nav li {
-    display: inline-block;
-    margin: 20px 5px;
-    font-family: 'Poppins', Helvetica, sans-serif;
-    font-weight: 500;
+  display: inline-block;
+  margin: 20px 2px;
+  font-family: "Poppins", Helvetica, sans-serif;
+  font-weight: 500;
 }
 
 nav li a:hover {
-    background-color: #ffffff;
-    background-color: #f0f0f0;
+  background-color: #ffffff;
+  background-color: #f0f0f0;
 }
 
-
 nav li a {
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 10px;
-    color: var(--black-gray);
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  color: var(--black-gray);
 }
 
 nav li a:active {
-    text-decoration: none;
-    color: var(--dark-blue);
+  text-decoration: none;
+  color: var(--dark-blue);
 }
 
+@media (max-width: 768px) {
+  .navbarDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    margin-right: 10px;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    left: -100%;
+    transition: left 0.4s ease-in;
+    text-align: center;
+    font-size: 1.6rem;
+  }
 
-@media (max-width:768px) {
-    .navbarDiv {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: white;
-        margin-right: 10px;
-        width: 100%;
-        height: 100vh;
-        position: fixed;
-        left: -100%;
-        transition: left 0.4s ease-in;
-        text-align: center;
-        font-size: 1.6rem;
-    }
-    
-    .navbarDiv {
-        font-size: 1.2rem;
-    }
-    nav {
-        width: 100%;
-    }
+  .navbarDiv {
+    font-size: 1.2rem;
+  }
+  nav {
+    width: 100%;
+  }
 
-    .active {
-        left: 0;
-    }
+  .active {
+    left: 0;
+  }
 
-    nav li {
-        display: block;
-    }
+  nav li {
+    display: block;
+  }
 }
