--- a/src/content/Contacts/Contacts.module.css
+++ b/src/content/Contacts/Contacts.module.css
@@ -3,13 +3,11 @@
   width: 100%;
   height: 100vh;
   background: var(--black-gray);
-  z-index: 0;
-  min-height: calc(480px + 65px);
+  z-index: -1;
 }
 
 .contactSection {
   width: 100%;
-  background-color: var(--black-gray);
   color: #fff;
 }
 
@@ -44,7 +42,6 @@
 .contactInfo {
   width: 50%;
   margin: 0 auto;
-  background-color: var(--black-gray);
   display: grid;
   grid-template-columns: auto auto auto;
   gap: 8px;
@@ -89,7 +86,7 @@
   padding: auto 0;
 }
 
-img {
+.contactInfo div a img {
   width: 50px;
 }
 
@@ -109,7 +106,7 @@ img {
     padding: auto 0;
   }
 
-  img {
+  .contactInfo div a img {
     width: 40px;
   }
 }
@@ -138,7 +135,7 @@ img {
     font-size: 1.6rem;
   }
 
-  img {
+  .contactInfo div a img {
     width: 30px;
   }
 }
