--- a/src/content/Projects/Projects.module.css
+++ b/src/content/Projects/Projects.module.css
@@ -2,8 +2,8 @@
   position: fixed;
   width: 100%;
   height: 100vh;
-  -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-  clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+  -webkit-clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
+  clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
   background: var(--black-gray);
   z-index: -1;
 }
@@ -41,8 +41,45 @@
   text-align: center;
 }
 
+.buttonLists {
+  display: flex;
+  justify-content: center;
+}
+
+.buttonLists button {
+  background-color: var(--red-orange);
+  color: var(--white);
+  margin: 0 5px 14px;
+  padding: 5px 10px;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+}
+
+.buttonLists button:hover {
+  background-color: var(--red-orange-hover);
+  color: var(--white);
+}
+
+.projectLists {
+  display: grid;
+  grid-template-columns: minmax(300px, 600px) minmax(300px, 600px);
+  gap: 10px;
+  padding: 10px;
+  justify-content: center;
+}
+
 .techStack {
   font-weight: 600;
+}
+
+@media (max-width: 840px) {
+  .projectLists {
+    display: grid;
+    grid-template-columns: auto;
+    gap: 10px;
+    padding: 10px;
+  }
 }
 
 @media (max-width: 768px) {
