--- a/src/content/About/About.module.css
+++ b/src/content/About/About.module.css
@@ -1,9 +1,9 @@
 .clipPath {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  -webkit-clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
-  clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
+  -webkit-clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
+  clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
   background: var(--black-gray);
   z-index: -1;
 }
@@ -16,7 +16,7 @@
   border-radius: 50%;
   border: none;
   margin: 14px;
-  height: 36px;
+  background-color: var(--white);
 }
 
 .backIcon {
@@ -25,63 +25,34 @@
 }
 
 .flexSB {
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  overflow: hidden;
+  align-items: center;
 }
 
 .aboutPart {
   width: 50%;
-  color: var(--black-gray);
+  color: var(--white);
 }
 
-.aboutPartTitle,
-.skillsPartTitle {
-  padding: 14px 20px;
-}
-
-.aboutPartTitle h2,
-.skillsPartTitle h2 {
-  font-size: 3rem;
-  font-weight: 800;
-  letter-spacing: 0.6px;
-  text-align: center;
-  line-height: 0.9;
-}
-
-.aboutPartTitle p,
-.skillsPartTitle p {
-  text-align: center;
-}
-
-/*-- About Content --*/
-.aboutPartContents {
-  padding: 0 10px 10px;
-}
-
-.aboutPartContents h2,
-.skillsPartContents h2 {
-  font-size: 1.6rem;
-  line-height: 0.9;
-  margin-top: 10px;
+.hireContainer {
+  background-color: var(--black-gray);
+  border-radius: 5px;
+  margin: 0 10px;
 }
 
 .skillsPart {
   width: 50%;
-  color: var(--white);
+  color: var(--black-gray);
 }
 
-.skillsPartContents {
-  padding: 0 10px;
-}
-
-.hardSkillsList {
-  margin: 0;
-  padding: 0;
-  display: block;
-  font-size: 1rem;
-  width: 50px;
+.skillsContainer {
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+  margin: 0 10px;
 }
 
 @media (max-width: 768px) {
@@ -91,11 +62,6 @@
 
   .skillsPart {
     width: 100%;
-    background: var(--black-gray);
-  }
-
-  .clipPath {
-    display: none;
   }
 
   .aboutPartTitle h2,
