--- a/src/content/Contacts/Contacts.module.css
+++ b/src/content/Contacts/Contacts.module.css
@@ -1,11 +1,12 @@
-.contentStyle {
-  position: absolute;
+.clipPath {
+  position: fixed;
   width: 100%;
   height: 100vh;
+  -webkit-clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
+  clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
   background: var(--black-gray);
   z-index: -1;
 }
-
 .contactSection {
   width: 100%;
   color: #fff;
@@ -20,7 +21,7 @@
   border-radius: 50%;
   border: none;
   margin: 14px;
-  height: 36px;
+  background-color: var(--white);
 }
 
 .contactSectionTitle {
@@ -60,7 +61,6 @@
   display: inline-grid;
   grid-template-columns: auto auto;
   justify-content: space-around;
-  background-color: #808080;
   grid-column: 1/3;
   border-radius: 3px;
 }
@@ -68,7 +68,6 @@
 .contactInfo div:nth-child(4) {
   display: flex;
   justify-content: space-around;
-  background-color: #808080;
   grid-column: 2/4;
   border-radius: 3px;
 }
@@ -81,7 +80,7 @@
 
 .contactInfo div {
   padding: 30px;
-  background-color: #808080;
+  background-color: var(--dark-blue);
   border-radius: 3px;
   padding: auto 0;
 }
@@ -101,7 +100,6 @@
 
   .contactInfo div {
     padding: 20px;
-    background-color: #808080;
     border-radius: 3px;
     padding: auto 0;
   }
