--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,16 @@
   font-family: "Poppins", Helvetica, sans-serif;
 }
 
+.clipPath {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  -webkit-clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
+  clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
+  background: var(--black-gray);
+  z-index: -1;
+}
+
 p,
 h2,
 h4 {
@@ -46,4 +56,11 @@ h4 {
 
 .carousel .control-dots .dot {
   background: var(--black-gray) !important;
+}
+
+@media (max-width: 768px) {
+  .clipPath {
+    -webkit-clip-path: polygon(100% 60%, 60% 100%, 100% 100%);
+    clip-path: polygon(100% 60%, 60% 100%, 100% 100%);
+  }
 }
