--- a/src/component/BackButton.module.css
+++ b/src/component/BackButton.module.css
@@ -1,13 +1,20 @@
+.BackButtonWrapper {
+  position: absolute;
+}
+
 .backButton {
   border-radius: 50%;
   border: none;
-  margin: 14px;
+  margin: 14px 0 0 14px;
   height: 36px;
   width: 36px;
-  background-color: var(--white);
+  background-color: transparent;
 }
 
 .backIcon {
   width: 100%;
   height: 100%;
+}
+
+@media (max-width: 768px) {
 }
