--- a/src/component/Navbar.module.css
+++ b/src/component/Navbar.module.css
@@ -1,9 +1,8 @@
 .navbarDiv {
   display: flex;
   justify-content: flex-end;
-  color: transparent;
   margin-right: 10px;
-  z-index: 1;
+  z-index: 100;
 }
 
 .menuButton {
@@ -11,6 +10,7 @@
   border: none;
   margin: 14px;
   height: 36px;
+  background-color: transparent;
 }
 
 .menuIcon {
@@ -20,7 +20,7 @@
 
 nav li {
   display: inline-block;
-  margin: 20px 2px;
+  margin: 20px 0;
   font-family: "Poppins", Helvetica, sans-serif;
   font-weight: 500;
 }
@@ -47,7 +47,7 @@ nav li a:active {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: #fff;
     margin-right: 10px;
     width: 100%;
     height: 100vh;
@@ -56,11 +56,13 @@ nav li a:active {
     transition: left 0.4s ease-in;
     text-align: center;
     font-size: 1.6rem;
+    z-index: 100;
   }
 
   .navbarDiv {
     font-size: 1.2rem;
   }
+
   nav {
     width: 100%;
   }
@@ -70,6 +72,11 @@ nav li a:active {
   }
 
   nav li {
+    display: block;
+    margin: 0;
+  }
+
+  nav li a {
     display: block;
   }
 }
