--- a/src/content/About/About.module.css
+++ b/src/content/About/About.module.css
@@ -11,46 +11,69 @@
   align-items: center;
 }
 
+.skillsPart,
 .aboutPart {
   width: 50%;
-  color: var(--white);
+  color: var(--dark-blue);
+  font-weight: 500;
 }
 
 .hireContainer {
-  background-color: var(--black-gray);
   border-radius: 5px;
   margin: 0 10px;
+  padding: 14px 10px;
 }
 
-.skillsPart {
-  width: 50%;
-  color: var(--black-gray);
+.hireContainer h2,
+.skillsContainer h2 {
+  font-size: 2.6rem;
+  font-weight: 900;
+  text-shadow: 3px 2px 1px rgba(0, 0, 0, 0.2);
+  letter-spacing: 0.6px;
+  text-align: center;
+  line-height: 0.9;
 }
 
 .skillsContainer {
   background-color: rgba(255, 255, 255, 0.9);
-  border-radius: 5px;
+  border-radius: 2px;
   margin: 0 10px;
+  box-shadow: 3px 4px 0px 3px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 3px 4px 0px 3px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 3px 4px 0px 3px rgba(0, 0, 0, 0.5);
+  padding: 10px;
+}
+
+.skillsContainer p {
+  text-align: center;
 }
 
 @media (max-width: 768px) {
+  .skillsPart,
   .aboutPart {
     width: 100%;
   }
 
-  .skillsPart {
-    width: 100%;
+  .hireContainer h2,
+  .skillsContainer h2 {
+    font-size: 2rem;
   }
 
-  .aboutPartTitle h2,
-  .skillsPartTitle h2 {
-    font-size: 2rem;
+  .hireContainer {
+    margin-top: 32px;
+  }
+
+  .skillsContainer {
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    margin: 0 0px;
   }
 }
 
 @media (max-width: 480px) {
-  .aboutPartTitle h2,
-  .skillsPartTitle h2 {
-    font-size: 1.6rem;
+  .hireContainer h2,
+  .skillsContainer h2 {
+    font-size: 1.4rem;
   }
 }
