--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,27 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200&display=swap");
-
 :root {
   --dark-blue: #3d5a80;
   --blue: #98c1d9;
   --light-blue: #e0fbfc;
   --red-orange: #ee6c4d;
   --black-gray: #293241;
+  --black-gray-hover: #323c50;
   --white: #fff;
   --light-bg: #f0f0f0;
+  --gray: #808080;
   --red-orange-hover: rgb(202, 79, 49);
+  --background-dark: #1e1e1e;
+  --background-light: #f5f5f5;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", Helvetica, sans-serif;
+  font-family: "Work Sans", sans-serif;
 }
 
-.clipPath {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  -webkit-clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
-  clip-path: polygon(100% 40%, 100% 100%, 40% 100%);
-  background: var(--black-gray);
-  z-index: -1;
-}
-
-p,
-h2,
-h4 {
-  user-select: none;
+body {
+  overflow-y: scroll;
 }
 
 /* width */
@@ -52,15 +42,4 @@ h4 {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #d44d2c;
-}
-
-.carousel .control-dots .dot {
-  background: var(--black-gray) !important;
-}
-
-@media (max-width: 768px) {
-  .clipPath {
-    -webkit-clip-path: polygon(100% 60%, 60% 100%, 100% 100%);
-    clip-path: polygon(100% 60%, 60% 100%, 100% 100%);
-  }
 }
