--- a/src/content/Projects/Card.module.css
+++ b/src/content/Projects/Card.module.css
@@ -1,12 +1,12 @@
 .card {
-  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.75);
+  /* box-shadow: 0px 0px 2px 2px rgba(97, 97, 97, 0.315);
+  -webkit-box-shadow: 0px 0px 2px 2px rgba(97, 97, 97, 0.315);
+  -moz-box-shadow: 0px 0px 2px 2px rgba(97, 97, 97, 0.315); */
+  box-shadow: -1px -2px 1px #5e687949, 1px 2px 1px #5e687949;
   padding: 12px 10px;
   background-color: var(--white);
   color: var(--black-gray);
   border-radius: 5px;
-  cursor: pointer;
 }
 
 .card h1 {
@@ -26,7 +26,8 @@
 }
 
 .descWrapper {
-  font-size: 0.9rem;
+  font-size: 1rem;
+  margin: 5px 0 5px 0;
 }
 
 .descWrapper button {
@@ -34,39 +35,36 @@
 }
 
 .projectLinks {
-  font-size: 14px;
+  font-size: 26px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 5px;
 }
 
-.projectLinks span {
-  display: block;
-}
-
-.projectLinks span a {
-  color: var(--red-orange);
-  padding: 0 3px;
-}
-
-.techStacks {
-  text-align: right;
+.projectLink {
+  color: var(--black-gray);
+  cursor: pointer;
 }
 
 .techStacks p {
   font-size: 16px;
-  font-weight: 600;
 }
 
 .techStacks ul {
   line-height: 14px;
+  display: flex;
+  gap: 8px;
 }
 
 .techStacks li {
   display: inline-block;
-  font-size: 14px;
-  font-weight: 400;
+  font-size: 16px;
+  margin-top: 5px;
 }
 
-.card li::before {
-  content: "/";
+.techStacks li img {
+  width: 26px;
+  height: 26px;
 }
 
 @media (max-width: 910px) {
